--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gradio-client": "^1.0.0",
     "lucide-react": "^0.513.0",
+    "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
   },
